--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,46 @@
 .App {
   text-align: center;
+  display:flex;
+  background-color: #282c34;
+  color:white;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left:0;
+  bottom:0;
+}
+
+
+.sideMenu{
+  width:260px;
+  padding:10px;
+ 
+  background-color:#262123;
+ 
+}
+
+.chat-space{
+  flex:1;
+  background-color: #343541;
+  position: relative;
+  
+  
+}
+.side-menu-button{
+    padding:12px;
+    border:1px solid white;
+    border-radius: 5px;
+    text-align: left;
+    transition: ease 0.25s all;
+}
+.side-menu-button:hover{
+  background-color: rgba(255, 255, 255, 0.1);
+
+}
+.side-menu-button  span{
+  padding-left: 6px;
+  padding-right: 12px;
+  color:white;
 }
 
 .App-logo {
@@ -11,6 +52,28 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+.chat-input-holder{
+padding:12px;
+position: absolute;
+bottom: 0;
+left:0;
+right: 0;
+}
+
+.chat-input-textarea{
+  background-color: #40414f;
+  width:90%;
+  border-radius: 5px;
+  border:none;
+  padding: 24px;
+  color: white;
+  font-size: 1.25em;
+
+  border-color: none;
+  margin: 12px;
+  outline: none;
+  box-shadow: 0 8px 0 0 rgba(0,0,0,0.25);
 }
 
 .App-header {
@@ -27,7 +90,49 @@
 .App-link {
   color: #61dafb;
 }
+.chat-log{
+  
+  text-align: left;
+  
+}
 
+.chat-message.chatgpt{
+  /* padding: 12px;
+  display: flex;
+  padding-left: 24px; 
+  padding-right: 24px; */
+  background-color: #444654;
+ 
+
+}
+.avatar.chatgpt{
+  background:#0da37f;
+  border-radius:50%;
+  width:40px;
+  height:40px;
+}
+
+.chat-message-center{
+  max-width: 640px;
+  margin-left: auto;
+  margin-right:auto;
+  padding: 12px;
+  display: flex;
+  padding-left: 24px; 
+  padding-right: 24px;
+
+  
+}
+.avatar{
+  background:white;
+  border-radius:50%;
+  width:40px;
+  height:40px;
+}
+.message{
+  padding-left: 40px; 
+  padding-right: 40px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
